[gd_scene load_steps=19 format=3 uid="uid://cxh1mc3m8ylco"]

[ext_resource type="Script" path="res://units/ally_mob.gd" id="1_q2wuq"]
[ext_resource type="Resource" uid="uid://cgjx1q705k5qi" path="res://resources/ally_mob_1.tres" id="2_pnmmy"]
[ext_resource type="Texture2D" uid="uid://v4xmklobd1bl" path="res://assets/enemies/basic_enemy_1_processed.png" id="3_e6u2t"]
[ext_resource type="PackedScene" uid="uid://day43uk5ccmnq" path="res://gui/health_bar.tscn" id="4_l65s1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aonth"]
atlas = ExtResource("3_e6u2t")
region = Rect2(0, 2, 30, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsg66"]
atlas = ExtResource("3_e6u2t")
region = Rect2(31, 2, 31, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ei4h"]
atlas = ExtResource("3_e6u2t")
region = Rect2(63, 2, 31, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay8tb"]
atlas = ExtResource("3_e6u2t")
region = Rect2(94, 2, 34, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_pttw0"]
atlas = ExtResource("3_e6u2t")
region = Rect2(0, 72, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_wgexb"]
atlas = ExtResource("3_e6u2t")
region = Rect2(33, 72, 33, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewelj"]
atlas = ExtResource("3_e6u2t")
region = Rect2(2, 40, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_648nl"]
atlas = ExtResource("3_e6u2t")
region = Rect2(32, 40, 28, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfsle"]
atlas = ExtResource("3_e6u2t")
region = Rect2(62, 40, 28, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_od5dt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aonth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsg66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ei4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay8tb")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pttw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wgexb")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewelj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_648nl")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewelj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_648nl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfsle")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5l6oy"]
size = Vector2(11.1223, 27.3997)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jkf1a"]
radius = 13.2505
height = 46.8058

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3ef2s"]
radius = 21.1347
height = 54.7192

[sub_resource type="CircleShape2D" id="CircleShape2D_wnxxa"]
radius = 47.629

[node name="AllyMob1" type="CharacterBody2D"]
scale = Vector2(0.839825, 0.99738)
collision_layer = 4
script = ExtResource("1_q2wuq")
base_stats = ExtResource("2_pnmmy")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.09526, 1)
sprite_frames = SubResource("SpriteFrames_od5dt")
animation = &"run"
autoplay = "run"
flip_h = true

[node name="HitBox" type="Area2D" parent="AnimatedSprite2D"]
scale = Vector2(0.913025, 1)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/HitBox"]
position = Vector2(-15.4794, 0)
scale = Vector2(1.08082, 1.24546)
shape = SubResource("RectangleShape2D_5l6oy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.988489, 0.728313)
shape = SubResource("CapsuleShape2D_jkf1a")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="HurtBox" type="Area2D" parent="."]
scale = Vector2(0.834277, 0.629963)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
scale = Vector2(0.945436, 1.10527)
shape = SubResource("CapsuleShape2D_3ef2s")
debug_color = Color(0.83589, 0.300212, 0.628555, 0.42)

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
shape = SubResource("CircleShape2D_wnxxa")

[node name="HealthBar" parent="." instance=ExtResource("4_l65s1")]
offset_left = -11.9072
offset_top = -23.0604
offset_right = 388.093
offset_bottom = -4.0104
scale = Vector2(0.0627621, 0.14558)

[node name="HealthBarTimer" type="Timer" parent="."]

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="health_changed" from="." to="HealthBar" method="update_health_bar"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="AnimatedSprite2D/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="AnimatedSprite2D/HitBox" to="." method="_on_hit_box_area_exited"]
[connection signal="area_entered" from="DetectionZone" to="." method="_on_detection_zone_area_entered"]
[connection signal="area_exited" from="DetectionZone" to="." method="_on_detection_zone_area_exited"]
[connection signal="timeout" from="HealthBarTimer" to="." method="_on_health_bar_timer_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
